k8s/vm2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vm2-web-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    kubevirt.io/domain: vm2-web
