k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-web-to-db
  namespace: aichared-dev
spec:
  podSelector:
    matchLabels:
      app: mysql  # Cible ton Pod DB
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          kubevirt.io/domain: vm1-firewall # Autorise SEULEMENT le firewall
